--- a/displayDMA.ioc
+++ b/displayDMA.ioc
@@ -1,4 +1,23 @@
 #MicroXplorer Configuration settings - do not modify
+ADC3.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC3.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,SamplingTimeOPAMP-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,Offset-3\#ChannelRegularConversion,NbrOfConversionFlag,Resolution
+ADC3.NbrOfConversionFlag=1
+ADC3.Offset-3\#ChannelRegularConversion=0
+ADC3.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.Rank-3\#ChannelRegularConversion=1
+ADC3.Resolution=ADC_RESOLUTION_6B
+ADC3.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC3.SamplingTimeOPAMP-3\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
+ADC3.master=1
+ADC4.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC4.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,SamplingTimeOPAMP-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,Resolution
+ADC4.NbrOfConversionFlag=1
+ADC4.Offset-1\#ChannelRegularConversion=0
+ADC4.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC4.Rank-1\#ChannelRegularConversion=1
+ADC4.Resolution=ADC_RESOLUTION_6B
+ADC4.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC4.SamplingTimeOPAMP-1\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -32,34 +51,38 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F303RET6
 Mcu.Family=STM32F3
-Mcu.IP0=DAC1
-Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM6
-Mcu.IP7=TIM7
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP0=ADC3
+Mcu.IP1=ADC4
+Mcu.IP10=USART2
+Mcu.IP2=DAC1
+Mcu.IP3=DMA
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=TIM6
+Mcu.IP9=TIM7
+Mcu.IPNb=11
 Mcu.Name=STM32F303R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA7
 Mcu.Pin11=PB10
-Mcu.Pin12=PC7
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PB4
-Mcu.Pin19=PB6
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PC7
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB3
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin20=PB4
+Mcu.Pin21=PB6
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA2
@@ -67,7 +90,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=23
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303RETx
@@ -132,6 +155,10 @@ PA9.Locked=true
 PA9.Signal=GPIO_Output
 PB10.Locked=true
 PB10.Signal=GPIO_Input
+PB13.Mode=IN5-Single-Ended
+PB13.Signal=ADC3_IN5
+PB14.Mode=IN4-Single-Ended
+PB14.Signal=ADC4_IN4
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -193,7 +220,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_DAC1_Init-DAC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_DAC1_Init-DAC1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
@@ -212,7 +239,7 @@ RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2C3Freq_Value=8000000
 RCC.I2SClocksFreq_Value=72000000
-RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLP,PLLQ,RCC_PLLsource_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLP,PLLQ,PLLSourceVirtual,RCC_PLLsource_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSI_VALUE=40000
 RCC.MCOFreq_Value=72000000
 RCC.PLLCLKFreq_Value=72000000
@@ -222,6 +249,7 @@ RCC.PLLMUL=RCC_PLL_MUL9
 RCC.PLLN=336
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=7
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RCC_PLLsource_Clock_Source_FROM_HSE=RCC_HSE_PREDIV_DIV2
 RCC.RTCFreq_Value=40000
 RCC.RTCHSEDivFreq_Value=250000
