--- a/displayDMA.ioc
+++ b/displayDMA.ioc
@@ -22,9 +22,8 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 DAC1.DAC_OutputBuffer=DAC_OUTPUTBUFFER_ENABLE
-DAC1.DAC_Trigger=DAC_TRIGGER_T7_TRGO
-DAC1.IPParameters=DAC_Trigger,DAC_OutputBuffer,WaveGeneration
-DAC1.WaveGeneration=DISABLE
+DAC1.DAC_Trigger=DAC_TRIGGER_NONE
+DAC1.IPParameters=DAC_Trigger,DAC_OutputBuffer
 Dma.DAC1_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.DAC1_CH1.1.Instance=DMA2_Channel3
 Dma.DAC1_CH1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -111,6 +110,7 @@ NVIC.SPI1_IRQn=true\:1\:1\:true\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -220,7 +220,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_DAC1_Init-DAC1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_DAC1_Init-DAC1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_ADC4_Init-ADC4-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
