Add joystick switch as an option to start the game

--- a/stm32-ili9341-game.ioc
+++ b/stm32-ili9341-game.ioc
@@ -78,10 +78,11 @@ Mcu.Pin18=PA14
 Mcu.Pin19=PB3
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PB4
-Mcu.Pin21=PB6
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin21=PB5
+Mcu.Pin22=PB6
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA2
@@ -89,7 +90,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=25
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303RETx
@@ -165,6 +166,11 @@ PB3.Locked=true
 PB3.Signal=SYS_JTDO-TRACESWO
 PB4.Locked=true
 PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB5.GPIO_Label=JOY_BUTTON
+PB5.GPIO_PuPd=GPIO_PULLUP
+PB5.Locked=true
+PB5.Signal=GPIO_Input
 PB6.GPIOParameters=GPIO_Speed
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB6.Locked=true
@@ -210,8 +216,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=displayDMA.ioc
-ProjectManager.ProjectName=displayDMA
+ProjectManager.ProjectFileName=stm32-ili9341-game.ioc
+ProjectManager.ProjectName=stm32-ili9341-game
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
